# Lumos

./: .gitignore  CMakeLists.txt  README.md  TODO  build.gradle  partitions.csv  platformio.ini  sdkconfig  uncrustify.cfg  uncrustify_old.cfg
Tests/src/: ArduinoLog.cpp
android/: .gitignore
android (old)/: build.gradle
android (old)/app/: build.gradle
android/app/: build.gradle  proguard-rules.pro
app/: .eslintrc.js  build.gradle  index.html  package-lock.json  package.json  proguard-rules.pro  vite.config.js
app/src/: App.vue  main.js
arduino/: .cproject  .gitignore  .ino.cpp  .project  BedControl.ino  BedControl_Arduino.ino  EEPROM organization.txt  TODO  arduino.ino  platformio.ini
arduino/Release/: subdir.mk
arduino/src/: Alarms.cpp  Alarms.h  ArduinoSerial.cpp  ArduinoSerial.h  Bluetooth.cpp  Bluetooth.h  DFPlayer.ino  EEPROM.ino  Global.cpp  Global.h  Infrared.cpp  Light.cpp  Light.h  Logger.cpp  Logger.h  Memory.cpp  Memory.h  Mods.h  Request.cpp  Request.h  SD.ino  SdCard.cpp  SdCard.h  Sound.cpp  Utils.cpp  Utils.h  VariableChange.cpp  VariableChange.h  alarms.ino  arduino.cpp  arduino.h  arduino.ino  claps.ino  debugPrint.ino  decode.ino  eeprom.ino  espSerial.ino  head.h  infrared.ino  lighting.ino  (+5 more)
bedcontrol/: .gitignore
bedcontrol/app/: build.gradle  proguard-rules.pro
components/alarm/: CMakeLists.txt  Kconfig  README.MD  alarm.c  alarm_item_dynamic.c
components/json_gen/: CMakeLists.txt  Kconfig  README.MD  json.c  json_gen.c
components/settings/: CMakeLists.txt  Kconfig  README.MD  gen_settings.py  settings.c
components/settings/impl/: settings_impl_nvs.c
components/settings/include/: settings.h
components/settings/priv_include/: settings_impl.h  settings_internal.h
components/urp/: CMakeLists.txt  Kconfig  README.MD  library.json  urp.c  urp.h
cppTests/arduino/: TODO  (+1 more)
data/: index.html  sendData.js
esp8266/: .cproject  .gitignore  .ino.cpp  .project  BedControl_ESP8266.ino  esp8266.ino  platformio.ini
main/: CMakeLists.txt  KConfig.projbuild  Kconfig  alarms.c  alarms.h  json.c  json.h  kconfig_stub.h  light.c  light.h  light_mode_task.c  light_mode_task.h  main.c  memory.c  memory.h  spiffs.c  spiffs.h  utils.c  utils.h
main/Legacy/: Alarms.cpp  Alarms.h  Infrared.cpp  Memory.h  Sound.cpp  Utils.cpp
main/com/: uart_com.c  uart_com.h  wifi_com.c  wifi_com.h
main/com/http/: http_client.c  http_client.h  http_server.c  http_server.h  http_server_cmd.c  http_server_cmd.h
main/peripherals/: light_strip.c  light_strip.h  sd_card.h
mobile/: build.gradle
res/: settings_defs.h  settings_groups.csv  settings_keys.csv
src/: Alarms.cpp  Alarms.h  ArduinoSerial.cpp  ArduinoSerial.h  Bluetooth.cpp  Bluetooth.h  ClientList.cpp  ClientList.h  ESPSerial.cpp  ESPSerial.h  ESPWifi.cpp  ESPWifi.h  Infrared.cpp  Infrared.h  Json.cpp  Json.h  Light.cpp  Light.h  LightModes.cpp  Logger.cpp  Logger.h  Memory.cpp  Memory.h  Request.cpp  Request.h  Resources.cpp  Resources.h  SdCard.cpp  SdCard.h  SerialCom.cpp  SerialCom.h  Sound.cpp  Sound.h  Types.cpp  Types.h  Utils.cpp  Utils.h  VariableChange.cpp  VariableChange.h  Wifi.cpp  (+32 more)
tools/: LittleFSBuilder.py
tv/: build.gradle
(+229 files in other folders)
